invidious/Deployment-invidious-companion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: invidious
  name: invidious-companion
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: invidious-companion
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: invidious-companion
    spec:
      containers:
      - env:
        - name: SERVER_SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: SERVER_SECRET_KEY
              name: invidious-companion-sealed-secret
        image: quay.io/invidious/invidious-companion:master-11cc6ac
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 30
          tcpSocket:
            port: 8282
          timeoutSeconds: 5
        name: invidious-companion
        ports:
        - containerPort: 8282
          name: http
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: 8282
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /var/tmp/youtubei.js
          name: cache
      enableServiceLinks: false
      volumes:
      - hostPath:
          path: /data/invidious/companion-cache
          type: DirectoryOrCreate
        name: cache
