invidious/Service-invidious-companion.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: invidious
    name: invidious-companion
  name: invidious-companion
  namespace: media
spec:
  ports:
  - name: invidious-companion-http
    port: 8282
    targetPort: 8282
  selector:
    name: invidious-companion
