invidious/Service-invidious.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: invidious
    name: invidious
  name: invidious
  namespace: media
spec:
  ports:
  - name: invidious-http
    port: 3000
    targetPort: 3000
  selector:
    name: invidious
