invidious/IngressRoute-invidious-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: invidious
  name: invidious-ingressroute
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`invidious.danielramos.me`)
    middlewares: null
    services:
    - name: invidious
      port: 3000
  tls: {}
